[gd_scene load_steps=64 format=3 uid="uid://be3fpwoys47ky"]

[ext_resource type="Script" path="res://Player/CowboyPlayer.gd" id="1_oimyp"]
[ext_resource type="Texture2D" uid="uid://c1lbkgla6h58g" path="res://Assets/sprites/Player sprite/back/walk-back0.png" id="2_w3kbx"]
[ext_resource type="Texture2D" uid="uid://dgqg84mys600c" path="res://Assets/sprites/Player sprite/back/walk-back1.png" id="3_fsym0"]
[ext_resource type="Texture2D" uid="uid://c250b1jsgirxu" path="res://Assets/ThunderParticle3.png" id="3_kdhep"]
[ext_resource type="Texture2D" uid="uid://bd17s43x8bvnf" path="res://Assets/sprites/Player sprite/back/walk-back2.png" id="4_0w4wj"]
[ext_resource type="Texture2D" uid="uid://5dmmsxkmaq8s" path="res://Assets/sprites/Player sprite/back/walk-back3.png" id="5_1v0la"]
[ext_resource type="Script" path="res://Player/CameraShake.gd" id="5_wqsxw"]
[ext_resource type="Texture2D" uid="uid://b0ss7lmfxgt1x" path="res://Assets/sprites/Player sprite/back/walk-back4.png" id="6_y743s"]
[ext_resource type="Texture2D" uid="uid://bup0idojnk4x1" path="res://Assets/sprites/Player sprite/back/walk-back5.png" id="7_ag7r4"]
[ext_resource type="PackedScene" uid="uid://bd15k20ikk6lo" path="res://Player/UIAndHUD/hud.tscn" id="7_k6um4"]
[ext_resource type="Texture2D" uid="uid://j3kyw01la2pf" path="res://Assets/sprites/Player sprite/back/walk-back6.png" id="8_cilsk"]
[ext_resource type="Texture2D" uid="uid://dmiwlom4nce57" path="res://Assets/sprites/Player sprite/back/walk-back7.png" id="9_k5tl6"]
[ext_resource type="Script" path="res://Player/AudioPlayer.gd" id="10_52od8"]
[ext_resource type="Texture2D" uid="uid://buso05m88nxci" path="res://Assets/sprites/Player sprite/back/idle-back0.png" id="10_dtb2u"]
[ext_resource type="AudioStream" uid="uid://cnbq0uqqeqxt7" path="res://Assets/Sound/Player Gun Click.wav" id="11_00c0b"]
[ext_resource type="Texture2D" uid="uid://cqu1df7doashu" path="res://Assets/sprites/Player sprite/forward/walk-front0.png" id="11_1jtq5"]
[ext_resource type="Texture2D" uid="uid://djjp4hy6tv085" path="res://Assets/sprites/Player sprite/back/idle-back1.png" id="11_xadcs"]
[ext_resource type="Texture2D" uid="uid://dibn2ui3vh2iq" path="res://Assets/sprites/Player sprite/back/dash-back.png" id="12_0kq4j"]
[ext_resource type="Texture2D" uid="uid://chcyysqxcjw8k" path="res://Assets/sprites/Player sprite/forward/walk-front1.png" id="12_1ma4s"]
[ext_resource type="Texture2D" uid="uid://f407ptend02v" path="res://Assets/sprites/Player sprite/back/idle-back2.png" id="12_55k2d"]
[ext_resource type="PackedScene" uid="uid://cac4vxkmwm5en" path="res://Player/melee.tscn" id="13_232df"]
[ext_resource type="Texture2D" uid="uid://do7acrdusfcw3" path="res://Assets/sprites/Player sprite/back/idle-back3.png" id="13_ip701"]
[ext_resource type="Texture2D" uid="uid://bfxw2b271valy" path="res://Assets/sprites/Player sprite/forward/walk-front2.png" id="13_nej0y"]
[ext_resource type="Texture2D" uid="uid://dumlykmsk05vw" path="res://Assets/sprites/Player sprite/forward/walk-front3.png" id="14_qr8wi"]
[ext_resource type="Texture2D" uid="uid://bc0uhfoechddb" path="res://Assets/sprites/Player sprite/forward/walk-front4.png" id="15_tc4ks"]
[ext_resource type="Texture2D" uid="uid://daop6c56n5h17" path="res://Assets/sprites/Player sprite/forward/walk-front5.png" id="16_m7swg"]
[ext_resource type="Texture2D" uid="uid://cct7usouxyx4h" path="res://Assets/sprites/Player sprite/forward/walk-front6.png" id="17_d5piw"]
[ext_resource type="Texture2D" uid="uid://k3u3eascj18j" path="res://Assets/sprites/Player sprite/forward/walk-front7.png" id="18_rxgvl"]
[ext_resource type="Texture2D" uid="uid://dksabnv54iv2i" path="res://Assets/sprites/Player sprite/side/walk-side0.png" id="20_annft"]
[ext_resource type="Texture2D" uid="uid://bmiai3o3ap4i8" path="res://Assets/sprites/Player sprite/side/walk-side1.png" id="21_b74b1"]
[ext_resource type="Texture2D" uid="uid://b306am3gm5rc2" path="res://Assets/sprites/Player sprite/forward/idle-front0.png" id="22_pfots"]
[ext_resource type="Texture2D" uid="uid://db738x2odkeuo" path="res://Assets/sprites/Player sprite/side/walk-side2.png" id="22_unkef"]
[ext_resource type="Texture2D" uid="uid://dnr8o3cskrq65" path="res://Assets/sprites/Player sprite/forward/idle-front1.png" id="23_5npk7"]
[ext_resource type="Texture2D" uid="uid://ci5bj1nkvdwed" path="res://Assets/sprites/Player sprite/side/walk-side3.png" id="23_riehi"]
[ext_resource type="Texture2D" uid="uid://5k1gdigsc58g" path="res://Assets/sprites/Player sprite/forward/idle-front2.png" id="24_1schh"]
[ext_resource type="Texture2D" uid="uid://du6u7lsqgn40l" path="res://Assets/sprites/Player sprite/side/walk-side4.png" id="24_k2orq"]
[ext_resource type="Texture2D" uid="uid://c1cf88ptrxayj" path="res://Assets/sprites/Player sprite/forward/idle-front3.png" id="25_0kl5m"]
[ext_resource type="Texture2D" uid="uid://bwm3n4jshv40d" path="res://Assets/sprites/Player sprite/forward/dash-front.png" id="25_75sb6"]
[ext_resource type="Texture2D" uid="uid://fcn5hlysgdil" path="res://Assets/sprites/Player sprite/side/walk-side5.png" id="25_qcqqe"]
[ext_resource type="Texture2D" uid="uid://djhnjymxougr1" path="res://Assets/sprites/Player sprite/side/walk-side6.png" id="26_8ut8v"]
[ext_resource type="Texture2D" uid="uid://b20j07hvav7fq" path="res://Assets/sprites/Player sprite/side/walk-side7.png" id="27_p4yqg"]
[ext_resource type="Texture2D" uid="uid://cd32vd56k5jj5" path="res://Assets/sprites/Player sprite/side/idle-side0.png" id="34_xcq8w"]
[ext_resource type="Texture2D" uid="uid://dod1bjfqe7oiu" path="res://Assets/sprites/Player sprite/side/idle-side1.png" id="35_c44it"]
[ext_resource type="Texture2D" uid="uid://nlvjbomq4de2" path="res://Assets/sprites/Player sprite/side/idle-side2.png" id="36_kt57j"]
[ext_resource type="Texture2D" uid="uid://c7e6b8jhtkgu2" path="res://Assets/sprites/Player sprite/side/idle-side3.png" id="37_iv0iv"]
[ext_resource type="Texture2D" uid="uid://bm7062nwa25te" path="res://Assets/sprites/Player sprite/side/dash side.png" id="38_r2t6s"]
[ext_resource type="Script" path="res://Player/thunderbird_area.gd" id="44_f0x4w"]
[ext_resource type="PackedScene" uid="uid://d18gh6v6mtf71" path="res://Player/dash_bar.tscn" id="44_ht30l"]
[ext_resource type="AudioStream" uid="uid://btdqjt3tlyvo1" path="res://Assets/Sound/General Sound WAVs/Player Die 1.wav" id="49_ijtw4"]
[ext_resource type="Script" path="res://Player/die_audio_player.gd" id="49_n3rmp"]
[ext_resource type="Texture2D" uid="uid://vwgsigrkwx6h" path="res://Assets/sprites/r1.png" id="51_46x4o"]
[ext_resource type="Texture2D" uid="uid://bsd2xll4seby8" path="res://Assets/sprites/red arrow.png" id="52_jcr06"]
[ext_resource type="Texture2D" uid="uid://8de60t730er1" path="res://Assets/sprites/E TO INTERACT.png" id="52_nf7e3"]
[ext_resource type="Script" path="res://Player/nav_arrow.gd" id="53_rgxnm"]
[ext_resource type="AudioStream" uid="uid://dvvufby0itlnt" path="res://Assets/Sound/General Sound WAVs/Item Collect.wav" id="55_b5yvu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bf1xx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_epel2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w3kbx")
}, {
"duration": 1.0,
"texture": ExtResource("3_fsym0")
}, {
"duration": 1.0,
"texture": ExtResource("4_0w4wj")
}, {
"duration": 1.0,
"texture": ExtResource("5_1v0la")
}, {
"duration": 1.0,
"texture": ExtResource("6_y743s")
}, {
"duration": 1.0,
"texture": ExtResource("7_ag7r4")
}, {
"duration": 1.0,
"texture": ExtResource("8_cilsk")
}, {
"duration": 1.0,
"texture": ExtResource("9_k5tl6")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_0kq4j")
}, {
"duration": 1.0,
"texture": ExtResource("12_0kq4j")
}, {
"duration": 1.0,
"texture": ExtResource("12_0kq4j")
}],
"loop": true,
"name": &"back_dash",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("10_dtb2u")
}, {
"duration": 2.0,
"texture": ExtResource("11_xadcs")
}, {
"duration": 2.0,
"texture": ExtResource("12_55k2d")
}, {
"duration": 2.0,
"texture": ExtResource("13_ip701")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_1jtq5")
}, {
"duration": 1.0,
"texture": ExtResource("12_1ma4s")
}, {
"duration": 1.0,
"texture": ExtResource("13_nej0y")
}, {
"duration": 1.0,
"texture": ExtResource("14_qr8wi")
}, {
"duration": 1.0,
"texture": ExtResource("15_tc4ks")
}, {
"duration": 1.0,
"texture": ExtResource("16_m7swg")
}, {
"duration": 1.0,
"texture": ExtResource("17_d5piw")
}, {
"duration": 1.0,
"texture": ExtResource("18_rxgvl")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_75sb6")
}, {
"duration": 1.0,
"texture": ExtResource("25_75sb6")
}, {
"duration": 1.0,
"texture": ExtResource("25_75sb6")
}],
"loop": true,
"name": &"front_dash",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("22_pfots")
}, {
"duration": 2.0,
"texture": ExtResource("23_5npk7")
}, {
"duration": 2.0,
"texture": ExtResource("24_1schh")
}, {
"duration": 2.0,
"texture": ExtResource("25_0kl5m")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_annft")
}, {
"duration": 1.0,
"texture": ExtResource("21_b74b1")
}, {
"duration": 1.0,
"texture": ExtResource("22_unkef")
}, {
"duration": 1.0,
"texture": ExtResource("23_riehi")
}, {
"duration": 1.0,
"texture": ExtResource("24_k2orq")
}, {
"duration": 1.0,
"texture": ExtResource("25_qcqqe")
}, {
"duration": 1.0,
"texture": ExtResource("26_8ut8v")
}, {
"duration": 1.0,
"texture": ExtResource("27_p4yqg")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_r2t6s")
}, {
"duration": 1.0,
"texture": ExtResource("38_r2t6s")
}, {
"duration": 1.0,
"texture": ExtResource("38_r2t6s")
}],
"loop": true,
"name": &"side_dash",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("34_xcq8w")
}, {
"duration": 2.0,
"texture": ExtResource("35_c44it")
}, {
"duration": 2.0,
"texture": ExtResource("36_kt57j")
}, {
"duration": 2.0,
"texture": ExtResource("37_iv0iv")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e1b84"]
radius = 18.0
height = 40.0

[sub_resource type="Animation" id="Animation_kc35r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CowboyAnim:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CowboyAnim:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1epm3"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CowboyAnim:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.75, 0.75, 1), Color(1, 1, 1, 1), Color(1, 0.22, 0.22, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CowboyAnim:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.733333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1), Vector2(0.7, 0.7), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_on5aa"]
resource_name = "melee"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterPoint/Melee:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(44, -46), Vector2(76, -22), Vector2(71, 29), Vector2(42, 61)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyhyu"]
_data = {
"RESET": SubResource("Animation_kc35r"),
"die": SubResource("Animation_1epm3"),
"melee": SubResource("Animation_on5aa")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_46jn4"]

[node name="CowboyPlayer" type="CharacterBody2D" groups=["player"]]
z_index = 1
script = ExtResource("1_oimyp")

[node name="DashEffect" type="CPUParticles2D" parent="."]
lifetime = 0.3
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(10, 10)
gravity = Vector2(980, 0)
scale_amount_min = 2.0
scale_amount_max = 4.0

[node name="ThunderbirdArea" type="Area2D" parent="."]
process_mode = 1
visible = false
collision_layer = 2
collision_mask = 2
script = ExtResource("44_f0x4w")

[node name="CPUParticles2D" type="CPUParticles2D" parent="ThunderbirdArea"]
scale = Vector2(2, 2)
amount = 30
local_coords = true
texture = ExtResource("3_kdhep")
emission_shape = 1
emission_sphere_radius = 50.0
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThunderbirdArea"]
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_bf1xx")

[node name="CowboyAnim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_epel2")
animation = &"front"
speed_scale = 2.5

[node name="CenterPoint" type="Marker2D" parent="."]

[node name="Melee" parent="CenterPoint" instance=ExtResource("13_232df")]
visible = false
position = Vector2(48, 0)
scale = Vector2(0.5, 0.5)
collision_mask = 0

[node name="GunPoint" type="Marker2D" parent="CenterPoint"]
position = Vector2(25, 0)

[node name="CowboyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_e1b84")

[node name="HUD" parent="." instance=ExtResource("7_k6um4")]

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
script = ExtResource("5_wqsxw")

[node name="Dash_Available" type="Timer" parent="."]
one_shot = true

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 0.499
one_shot = true

[node name="Thunder_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_00c0b")
volume_db = -15.0
script = ExtResource("10_52od8")

[node name="AudioListener2D" type="AudioListener2D" parent="AudioPlayer"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nyhyu")
}

[node name="Dash_Bar" parent="." instance=ExtResource("44_ht30l")]
offset_left = -18.0
offset_top = -44.0
offset_right = 17.0
offset_bottom = -37.0

[node name="Reload_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DieAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("49_ijtw4")
script = ExtResource("49_n3rmp")

[node name="reload_r" type="TextureRect" parent="."]
offset_left = -17.0
offset_top = -79.0
offset_right = 326.0
offset_bottom = 223.0
scale = Vector2(0.102344, 0.102344)
texture = ExtResource("51_46x4o")

[node name="E_interact" type="TextureRect" parent="."]
offset_left = -20.0
offset_top = 40.0
offset_right = 424.0
offset_bottom = 431.0
scale = Vector2(0.102344, 0.102344)
texture = ExtResource("52_nf7e3")

[node name="nav_arrow" type="Sprite2D" parent="."]
position = Vector2(-1, -10)
texture = ExtResource("52_jcr06")
offset = Vector2(0, -100)
script = ExtResource("53_rgxnm")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_46jn4")

[node name="ItemCollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("55_b5yvu")
volume_db = -13.0

[connection signal="body_entered" from="ThunderbirdArea" to="ThunderbirdArea" method="_on_body_entered"]
[connection signal="body_exited" from="ThunderbirdArea" to="ThunderbirdArea" method="_on_body_exited"]
[connection signal="timeout" from="Dash_Available" to="." method="_on_dash_available_timeout"]
[connection signal="timeout" from="Dash_Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Thunder_Timer" to="." method="_on_thunder_timer_timeout"]
[connection signal="timeout" from="Reload_Timer" to="." method="_on_reload_timer_timeout"]
